--- a/components/gardencontent/seeds/manifests/shoot_manifest.yaml
+++ b/components/gardencontent/seeds/manifests/shoot_manifest.yaml
@@ -49,7 +49,7 @@ spec:
     enabled: false
   addons:
     nginxIngress:
-      enabled: true
+      enabled: false
     kubernetesDashboard:
       enabled: false
 
